--- a/Match_Winning_Pressure_Index.ipynb
+++ b/Match_Winning_Pressure_Index.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiIr62ox4y1lQUC2fxNztp",
+      "authorship_tag": "ABX9TyNUQFH8ImjNVss4E6kfD+lQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "FszB286C0qlm"
       },
@@ -71,7 +71,7 @@
         "id": "bBo2p93h1PSh",
         "outputId": "0cbba271-d17f-4775-b7d5-d07374aabe9c"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +252,7 @@
       "metadata": {
         "id": "rb0AurLP1XQG"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +283,7 @@
       "metadata": {
         "id": "UXMMK2Tl1Xal"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +314,7 @@
       "metadata": {
         "id": "Sbk-2eIn1XjH"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +352,7 @@
         "id": "oXXRcGIn1XrU",
         "outputId": "9d237e3f-21c1-4234-d83b-0688ada7864f"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -401,7 +401,7 @@
         "id": "Pc3QthvV1XyS",
         "outputId": "e5721845-54ae-493e-9076-c084c5734594"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -452,7 +452,7 @@
       "metadata": {
         "id": "oB43sWIe8SQ3"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -464,7 +464,7 @@
       "metadata": {
         "id": "8Qtdg1Eu9Y1K"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +482,7 @@
         "id": "CfCRkK5094Ev",
         "outputId": "dbfed752-0ba0-4035-94e5-d332de75b331"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +511,7 @@
       "metadata": {
         "id": "o45Y9fC51X_H"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -542,7 +542,7 @@
       "metadata": {
         "id": "o4-KJZt51YGV"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -576,7 +576,7 @@
       "metadata": {
         "id": "yy9zdokE1YNa"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -614,7 +614,7 @@
         "id": "LYzn5iaL1YaS",
         "outputId": "65df7a3b-710b-45d6-8be9-3a735dc4a490"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -649,7 +649,7 @@
         "id": "2K1_7SR11Yf7",
         "outputId": "0d63aabf-a16f-4396-c2a0-98a98d3f1709"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -716,7 +716,7 @@
         "id": "cqSJT64EJFET",
         "outputId": "c41c26af-711d-4dcf-9fb1-ddbb6f9fcfdf"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -781,7 +781,7 @@
         "id": "fopoKAaUJPqc",
         "outputId": "2cc91d89-4198-4dd7-e3f1-093de628b235"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -804,7 +804,7 @@
       "metadata": {
         "id": "HyrRadoW1YnB"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -837,7 +837,7 @@
         "id": "8KfsWEAR1Yul",
         "outputId": "2f0f089a-7e87-4530-f14e-1112fab7f92a"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,7 +890,7 @@
         "id": "t8R2ZPnN1Y3T",
         "outputId": "8e84083d-891a-4325-fa4a-f81b4468b461"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -943,7 +943,7 @@
         "id": "7XNDLle41Y_O",
         "outputId": "29e92b43-0a13-4ddc-ea0b-1afdc3756d3b"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -996,7 +996,7 @@
       "metadata": {
         "id": "V-AZfcYb1ZLa"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1022,7 +1022,7 @@
       "metadata": {
         "id": "zDOx0Krn1ZTM"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1050,7 +1050,7 @@
       "metadata": {
         "id": "C5TNVT551ZXn"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1081,7 +1081,7 @@
         "id": "ZzNLG-ph_dKc",
         "outputId": "83c46749-8ffa-44ed-a38d-74cc8e227575"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1116,7 +1116,7 @@
         "id": "Nh6L6ZwaAUtl",
         "outputId": "2fd8a6f7-80e4-42b9-f771-b262c7ff005c"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1149,7 +1149,7 @@
       "metadata": {
         "id": "fKC00fTgAaeq"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1183,7 +1183,7 @@
         "id": "LCNwJHJcAakq",
         "outputId": "df4c5349-cb54-40bb-8c6f-3ae58333b3e1"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1261,7 +1261,7 @@
         "id": "26PTpp-JAa71",
         "outputId": "1353eac0-325a-42cb-8ad6-74d31ff96402"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1310,7 +1310,7 @@
         "id": "6hjIRDHnAbHs",
         "outputId": "7e000d9d-e2c7-472f-8316-10254179b720"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1383,27 +1383,17 @@
       "metadata": {
         "id": "aKbrSO6mHTYJ"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "The IPL Pressure Cooker: Unveiling the Coolest Heads\n",
+        "The Match-Winning Pressure Index project addresses a crucial gap in cricket analysis: understanding how players perform in high-pressure situations. Traditional stats like runs and wickets often fail to reflect a player's ability to deliver when it matters most, such as during tight chases or crucial match moments. This project quantifies pressure performance, providing a Pressure Index based on metrics like runs scored or wickets taken in critical scenarios, like the final overs or key moments in a match.\n",
         "\n",
-        "The Indian Premier League (IPL) is a high-stakes tournament where pressure can make or break a player. Our analysis uncovered the \"Pressure Kings,\" the individuals who thrive when the heat is on.\n",
+        "By analyzing historical data and identifying players who thrive under pressure, this model offers actionable insights for teams, coaches, and fantasy players. For teams, it helps identify match-winners who are best suited for high-pressure roles, while fantasy managers can use the index to optimize captain and vice-captain selections during crunch moments.\n",
         "\n",
-        "Early Onslaught: In the Powerplay, batsmen like Jos Buttler and David Warner unleashed aggressive intent, while bowlers like Trent Boult and Rashid Khan stifled opponents with early wickets.\n",
-        "\n",
-        "Middle-Over Mastery: As the innings progressed, Virat Kohli and Kane Williamson anchored their teams with composed batting, while spinners Yuzvendra Chahal and Sunil Narine controlled the run flow.\n",
-        "\n",
-        "Death-Over Drama: The final overs witnessed MS Dhoni and Andre Russell delivering clutch finishes, while Jasprit Bumrah and Kagiso Rabada executed crucial deliveries under immense pressure.\n",
-        "\n",
-        "The \"Mr. Clutch\" Factor: AB de Villiers, a true enigma, excelled across all phases, showcasing exceptional adaptability and consistency under pressure.\n",
-        "\n",
-        "The Pressure Kings Leaderboard: Overall, Virat Kohli and AB de Villiers emerged as the top batsmen, consistently delivering under pressure. Among bowlers, Jasprit Bumrah and Rashid Khan reigned supreme, their ability to perform in crunch situations making them invaluable assets.\n",
-        "\n",
-        "Conclusion: The IPL pressure index analysis highlighted the extraordinary talent and mental fortitude of these exceptional individuals. They rise to the occasion, delivering match-winning performances when it matters most. Their ability to handle pressure and their unwavering commitment to excellence makes them true champions of the game."
+        "The results from this project revealed key players like Dwayne Bravo and Hardik Pandya as consistent pressure performers, while highlighting players who tend to underperform in tense situations. Overall, the Pressure Index is a game-changing tool for improving match strategies, player selections, and fantasy team optimization, making it a valuable resource for cricket analysts, coaches, and enthusiasts alike."
       ],
       "metadata": {
         "id": "P5FlR_p2HaTF"
